--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.17.3",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "momentjs": "^2.0.0",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.12.2",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set PORT=4000 && react-scripts start",
+    "start": "set PORT=3000 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
