--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.17.3",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.11.11",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "momentjs": "^2.0.0",
